--- a/public/modules/slideshows/css/variables.scss
+++ b/public/modules/slideshows/css/variables.scss
@@ -24,7 +24,9 @@ $slideshow-edit-slide-previewWidth: 213px;
 
 $slideshow-edit-slide-data-tab-padding: 25px;
 
-$slideshow-edit-slide-preview-height: 130px;
+$slideshow-edit-slide-preview-width: 209px;
+
+$slideshow-edit-slide-preview-height: 118px;
 
 $slideshow-edit-slide-actions-height: 25px;
 
